--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
   		<artifactId>postgresql</artifactId>
   		<version>9.1-901-1.jdbc4</version>
   	</dependency>
+  	<dependency>
+	<groupId>org.mockito</groupId>
+	<artifactId>mockito-all</artifactId>
+	<version>1.9.5</version>
+</dependency>
+  	
   </dependencies>
   <name>ParameterConfigurationModule</name>
 </project>
